# Planner-3.0

./: Planner.md  Planner.py  README.md  What's new.md  capacity.py  capacity_ui.py  components.py  database.py  excel_import.py  excel_import_ui.py  load_calculator.py  logic.md  make.ps1  msproject_import.py  pyproject.toml  repository.py  requirements.txt
.cursor/plans/: multi-user_server_scaling_2986b1e2.plan.md
app_pages/: analytics.py  calendar.py  clear_data.py  config_page.py  dashboard.py  employees.py  gantt.py  import_excel.py  projects.py  sql_runner.py  vacations.py
docs/: IMPLEMENTATION_STEP2_import_employees.md  REFACTORING_EXECUTION.md  REFACTORING_RESULTS.md  REFACTORING_STAGES.md  workflow.md
installer/: Planner.iss  README.md  build_dist.ps1  build_installer.ps1  Инструкция_по_установке.txt
installer/scripts/: check_planner_service.ps1  create_desktop_url.ps1  download_nssm.ps1  download_pip_packages.ps1  download_python_embedded.ps1  download_vc_redist.ps1  install_service.bat  register_task.ps1  setup_venv.bat  start_planner_service.ps1  stop_planner_service.ps1  unregister_task.ps1
installer_sources/: start_planner.bat
installer_sources/app/: .gitignore  Makefile  New_interface.md  Planner.md  Planner.py  README.md  What's new.md  config.py  database.py  load_calculator.py  (+3 more)
tests/: test_app_logging.py  test_calendar.py  test_dashboard.py  test_excel_import.py  test_helpers_smoke.py  test_load_calculator.py  test_msproject_import.py  test_planner.py  test_project_status_change.py
utils/: app_logging.py  date_utils.py  type_utils.py
(+24 files in other folders)
